# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-12-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Remove CloudI Erlang/OTP version macro checks for before 19.x
      (cloudi_core now has no internal NIF usage,
       the only internal port driver usage is through
       cloudi_x_syslog when syslog usage is enabled)

2016-12-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add CloudILogger Elixir module to the cloudi_core Erlang application
    * Fix CloudILogger Elixir usage of function/arity data
    * Update the Elixir.HelloWorld1 example based on the changes
    * Update reltool_util

2016-12-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Require Erlang/OTP 19.x or higher
    * Switch to always logging the function name and arity due to EEP45
      included in Erlang/OTP 19.x
    * Update reltool_util
    * Fix old rebar2 package compile issue

2016-12-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the name of the service configuration option
      terminate_delay to restart_delay, to avoid being misleading
    * Update cloudi_service_monitoring to handle changes to cloudi_core
      for the restart_delay service configuration option
    * Add request_pid and info_pid metrics for internal services to
      cloudi_service_monitoring

2016-12-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve validation of the service configuration options
      terminate_delay, count_process_dynamic and monkey_latency

2016-12-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add terminate_delay service configuration option to allow a
      service instance to delay a restart
      (attempting to avoid spurious failures when the failure cause
       requires a short amount of time to be resolved)
      based on the suggestions of Richard Carlsson in
      https://github.com/erlang/otp/pull/1287
    * Fix service restarts to ensure all terminate functions have completed